--- a/presentation-planner/build.gradle
+++ b/presentation-planner/build.gradle
@@ -5,4 +5,6 @@ apply from: "$rootDir/presentation.gradle"
 dependencies {
     implementation project(':domain')
     api project(':presentation-core')
+
+    implementation("org.burnoutcrew.composereorderable:reorderable:0.9.2")
 }
