--- a/tracking/build.gradle
+++ b/tracking/build.gradle
@@ -1,10 +1,21 @@
 apply plugin: "com.android.library"
 apply from: "$rootDir/common.gradle"
 
+android {
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_compiler_version
+    }
+}
+
 dependencies {
     implementation "com.google.android.gms:play-services-location:$gms_version"
 
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.activity:activity-compose:$compose_activity_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
