--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         junit_jupiter = "5.9.1"
         junit5_version = "1.8.2.1"
         mockito_version = "4.1.0"
+        yearclass_version = "2.1.0"
 
         lifecycle_version = "2.5.1"
         lifecycle_extensions_version = "2.2.0"
