--- a/data/build.gradle
+++ b/data/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson_version"
 
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+
+    implementation "com.facebook.device.yearclass:yearclass:$yearclass_version"
 }
