--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -7,6 +7,8 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+
     implementation project(':geometry')
 
     //Test
