--- a/common.gradle
+++ b/common.gradle
@@ -19,6 +19,7 @@ android {
         // Disabling experimental warnings
         freeCompilerArgs += [
                 "-opt-in=kotlin.time.ExperimentalTime",
+                "-opt-in=kotlin.contracts.ExperimentalContracts",
                 "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
                 "-opt-in=androidx.compose.animation.ExperimentalAnimationApi",
                 "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi",
