--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
